--- a/package.json
+++ b/package.json
@@ -3,24 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-
     "@aws-amplify/auth": "^5.1.5",
     "@aws-amplify/core": "^5.0.11",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.3",
-    "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@reduxjs/toolkit": "^1.9.1",
-    "@rollup/plugin-commonjs": "^24.0.1",
-    "@rollup/plugin-json": "^6.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "amazon-cognito-identity-js": "^6.1.2",
     "aws-amplify": "^5.0.11",
     "aws-sdk": "^2.1299.0",
@@ -28,13 +20,17 @@
     "highcharts": "^9.3.0",
     "highcharts-react-official": "^3.1.0",
     "papaparse": "^5.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
+    "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "use-debounce": "^9.0.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
